--- a/home.html
+++ b/home.html
@@ -1,1 +1,12 @@
-
+<!doctype HTML>
+<html>
+  
+<head>
+  <title>Nora's Basketball Association</title>
+</head>
+  
+<body>
+  <h1>Nora's Basketball Association</h1>
+</body>
+  
+</html>
